fix users/tasks count

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
+  <meta charset="utf-8">
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 </head>
 <body>
 <rapi-doc
-        spec-url="../openapi/openapi.yaml"
-        theme="dark"
-        show-header="false"
-        primary-color="#33FFB5"
-        allow-spec-url-load="false"
-        allow-spec-file-load="false"
+  spec-url="../openapi/openapi.yaml"
+  theme="dark"
+  show-header="false"
+  primary-color="#33FFB5"
+  allow-spec-url-load="false"
+  allow-spec-file-load="false"
 >
 </rapi-doc>
 </body>
